added profile apis and made other changes
