# api-doc/liquipack-workflow-api-doc.json
@@ -44,6 +44,18 @@
             "schema": {
               "$ref": "#/definitions/response__get__users"
             }
+          },
+          "403": {
+            "description": "status: access_denied",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "500": {
+            "description": "status: error",
+            "schema": {
+              "$ref": "#/definitions/response__500"
+            }
           }
         }
       },
@@ -107,7 +119,8 @@
             "type": "string",
             "enum": [
               "male",
-              "female"
+              "female",
+              "others"
             ]
           }
         ],
@@ -116,6 +129,24 @@
             "description": "status: success",
             "schema": {
               "$ref": "#/definitions/response__post__users"
+            }
+          },
+          "400": {
+            "description": "status: invalid_request",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "403": {
+            "description": "status: access_denied",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "500": {
+            "description": "status: error",
+            "schema": {
+              "$ref": "#/definitions/response__500"
             }
           }
         }
@@ -144,6 +175,18 @@
             "description": "status: success",
             "schema": {
               "$ref": "#/definitions/response__get__users__user_id"
+            }
+          },
+          "403": {
+            "description": "status: access_denied",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "500": {
+            "description": "status: error",
+            "schema": {
+              "$ref": "#/definitions/response__500"
             }
           }
         }
@@ -208,7 +251,8 @@
             "type": "string",
             "enum": [
               "male",
-              "female"
+              "female",
+              "others"
             ]
           }
         ],
@@ -217,6 +261,24 @@
             "description": "status: success",
             "schema": {
               "$ref": "#/definitions/response__put__users__user_id"
+            }
+          },
+          "400": {
+            "description": "status: invalid_request",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "403": {
+            "description": "status: access_denied",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "500": {
+            "description": "status: error",
+            "schema": {
+              "$ref": "#/definitions/response__500"
             }
           }
         }
@@ -257,12 +319,201 @@
             "schema": {
               "$ref": "#/definitions/response__delete__users__user_id"
             }
+          },
+          "400": {
+            "description": "status: invalid_request",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "403": {
+            "description": "status: access_denied",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "500": {
+            "description": "status: error",
+            "schema": {
+              "$ref": "#/definitions/response__500"
+            }
+          }
+        }
+      }
+    },
+    "/profile/{user_id}": {
+      "get": {
+        "tags": [
+          "profile"
+        ],
+        "summary": "Get user by user_id (ObjectId)",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "_id (ObjectId) of the user object",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "status: success",
+            "schema": {
+              "$ref": "#/definitions/response__get__profile__user_id"
+            }
+          },
+          "403": {
+            "description": "status: access_denied",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "500": {
+            "description": "status: error",
+            "schema": {
+              "$ref": "#/definitions/response__500"
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "profile"
+        ],
+        "summary": "Modifies user data",
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "_id (ObjectId) of the user object",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "password_hash",
+            "in": "formData",
+            "description": "MD5 hash of the user's password",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "description": "User's name",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "email",
+            "in": "formData",
+            "description": "User's email address",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "phone",
+            "in": "formData",
+            "description": "User's phone number",
+            "type": "string"
+          },
+          {
+            "name": "gender",
+            "in": "formData",
+            "description": "User's gender",
+            "type": "string",
+            "enum": [
+              "male",
+              "female",
+              "others"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "status: success",
+            "schema": {
+              "$ref": "#/definitions/response__put__profile__user_id"
+            }
+          },
+          "400": {
+            "description": "status: invalid_request",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "403": {
+            "description": "status: access_denied",
+            "schema": {
+              "$ref": "#/definitions/response__403"
+            }
+          },
+          "500": {
+            "description": "status: error",
+            "schema": {
+              "$ref": "#/definitions/response__500"
+            }
           }
         }
       }
     }
   },
   "definitions": {
+    "response__403": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "message": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
+        }
+      },
+      "example": {
+        "status": "access_denied",
+        "message": "Access to this operation is denied",
+        "user_id": "5cbb5d71f3cb256e348e9a5",
+        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6ImY1MGU3OGY0LTE4YzctNDNjYS05YjllLTcyNjg4Yzg3YmJmZSIsImlhdCI6MTU2NDY0NDA2NiwiZXhwIjoxNTY0OTAzMjY2fQ.iJezSC_Wg05pWdqqKhsLW4IdVS1qQEfLuc8ymvlfTQY"
+      }
+    },
+    "response__500": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "message": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
+        }
+      },
+      "example": {
+        "status": "error",
+        "message": "<System Error>",
+        "user_id": "5cbb5d71f3cb256e348e9a5",
+        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6ImY1MGU3OGY0LTE4YzctNDNjYS05YjllLTcyNjg4Yzg3YmJmZSIsImlhdCI6MTU2NDY0NDA2NiwiZXhwIjoxNTY0OTAzMjY2fQ.iJezSC_Wg05pWdqqKhsLW4IdVS1qQEfLuc8ymvlfTQY"
+      }
+    },
     "model__user": {
       "type": "object",
       "properties": {
@@ -291,7 +542,8 @@
           "type": "string",
           "enum": [
             "male",
-            "female"
+            "female",
+            "others"
           ]
         },
         "created_date": {
@@ -359,6 +611,12 @@
           "items": {
             "$ref": "#/definitions/model__user"
           }
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
         }
       },
       "example": {
@@ -378,7 +636,9 @@
             "phone": "9740895495",
             "__v": 0
           }
-        ]
+        ],
+        "user_id": "5cbb5d71f3cb256e348e9a56",
+        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6IjlmYzU1OTdmLWIzODctNGE5ZC1hZTNhLTg5NWU3ZTIzMWU4ZSIsImlhdCI6MTU2NDY1MTE3MCwiZXhwIjoxNTY0OTEwMzcwfQ.RXJBRPyKXWsXQ_CKmPqNBCypyDpD2q8SiF8XSPJk2Z0"
       }
     },
     "response__post__users": {
@@ -392,6 +652,12 @@
         },
         "data": {
           "$ref": "#/definitions/model__user"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
         }
       },
       "example": {
@@ -409,7 +675,9 @@
           "email": "sushant.kum96@gmail.com",
           "phone": "9740895495",
           "__v": 0
-        }
+        },
+        "user_id": "5cbb5d71f3cb256e348e9a56",
+        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6IjlmYzU1OTdmLWIzODctNGE5ZC1hZTNhLTg5NWU3ZTIzMWU4ZSIsImlhdCI6MTU2NDY1MTE3MCwiZXhwIjoxNTY0OTEwMzcwfQ.RXJBRPyKXWsXQ_CKmPqNBCypyDpD2q8SiF8XSPJk2Z0"
       }
     },
     "response__get__users__user_id": {
@@ -423,6 +691,12 @@
         },
         "data": {
           "$ref": "#/definitions/model__user"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
         }
       },
       "example": {
@@ -440,7 +714,9 @@
           "email": "sushant.kum96@gmail.com",
           "phone": "9740895495",
           "__v": 0
-        }
+        },
+        "user_id": "5cbb5d71f3cb256e348e9a56",
+        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6IjlmYzU1OTdmLWIzODctNGE5ZC1hZTNhLTg5NWU3ZTIzMWU4ZSIsImlhdCI6MTU2NDY1MTE3MCwiZXhwIjoxNTY0OTEwMzcwfQ.RXJBRPyKXWsXQ_CKmPqNBCypyDpD2q8SiF8XSPJk2Z0"
       }
     },
     "response__put__users__user_id": {
@@ -454,6 +730,12 @@
         },
         "data": {
           "$ref": "#/definitions/model__user"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
         }
       },
       "example": {
@@ -471,7 +753,9 @@
           "email": "sushant.kum96@gmail.com",
           "phone": "9740895495",
           "__v": 0
-        }
+        },
+        "user_id": "5cbb5d71f3cb256e348e9a56",
+        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6IjlmYzU1OTdmLWIzODctNGE5ZC1hZTNhLTg5NWU3ZTIzMWU4ZSIsImlhdCI6MTU2NDY1MTE3MCwiZXhwIjoxNTY0OTEwMzcwfQ.RXJBRPyKXWsXQ_CKmPqNBCypyDpD2q8SiF8XSPJk2Z0"
       }
     },
     "response__delete__users__user_id": {
@@ -485,6 +769,12 @@
         },
         "data": {
           "$ref": "#/definitions/model__user"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
         }
       },
       "example": {
@@ -512,8 +802,88 @@
             "email": "sushant.kum96@gmail.com",
             "phone": "9740895495",
             "__v": 0
-          }
+          },
+          "user_id": "5cbb5d71f3cb256e348e9a56",
+          "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6IjlmYzU1OTdmLWIzODctNGE5ZC1hZTNhLTg5NWU3ZTIzMWU4ZSIsImlhdCI6MTU2NDY1MTE3MCwiZXhwIjoxNTY0OTEwMzcwfQ.RXJBRPyKXWsXQ_CKmPqNBCypyDpD2q8SiF8XSPJk2Z0"
         }
+      }
+    },
+    "response__get__profile__user_id": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "message": {
+          "type": "string"
+        },
+        "data": {
+          "$ref": "#/definitions/model__user"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
+        }
+      },
+      "example": {
+        "status": "success",
+        "message": "Profile retrieved successfully",
+        "data": {
+          "is_active": true,
+          "_id": "5cb8c5baf318582239f7c8a6",
+          "app_permissions": [],
+          "created_date": "2019-04-18T18:45:14.630Z",
+          "username": "admin",
+          "password_hash": "21232f297a57a5a743894a0e4a801fc3",
+          "name": "Sushant Kumar",
+          "gender": "male",
+          "email": "sushant.kum96@gmail.com",
+          "phone": "9740895495",
+          "__v": 0
+        },
+        "user_id": "5cbb5d71f3cb256e348e9a56",
+        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6IjlmYzU1OTdmLWIzODctNGE5ZC1hZTNhLTg5NWU3ZTIzMWU4ZSIsImlhdCI6MTU2NDY1MTE3MCwiZXhwIjoxNTY0OTEwMzcwfQ.RXJBRPyKXWsXQ_CKmPqNBCypyDpD2q8SiF8XSPJk2Z0"
+      }
+    },
+    "response__put__profile__user_id": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "message": {
+          "type": "string"
+        },
+        "data": {
+          "$ref": "#/definitions/model__user"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
+        }
+      },
+      "example": {
+        "status": "success",
+        "message": "User profile updated successfully",
+        "data": {
+          "is_active": true,
+          "_id": "5cb8c5baf318582239f7c8a6",
+          "app_permissions": [],
+          "created_date": "2019-04-18T18:45:14.630Z",
+          "username": "admin",
+          "password_hash": "21232f297a57a5a743894a0e4a801fc3",
+          "name": "Sushant",
+          "gender": "male",
+          "email": "sushant.kum96@gmail.com",
+          "phone": "9740895495",
+          "__v": 0
+        },
+        "user_id": "5cbb5d71f3cb256e348e9a56",
+        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImFkbWluIiwidXVpZCI6IjlmYzU1OTdmLWIzODctNGE5ZC1hZTNhLTg5NWU3ZTIzMWU4ZSIsImlhdCI6MTU2NDY1MTE3MCwiZXhwIjoxNTY0OTEwMzcwfQ.RXJBRPyKXWsXQ_CKmPqNBCypyDpD2q8SiF8XSPJk2Z0"
       }
     }
   }
